Fixed some dark mode styling errors that were causing some elements to not change color

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -58,6 +58,10 @@
   font-size: var(--lrg-txt);
 }
 
+.side-nav ul {
+  color: var(--text);
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -138,3 +142,11 @@ footer p {
   font-size: var(--lrg-txt);
 }
 
+h1 {
+  color: var(--text);
+  font-size: var(--lrg-txt)
+}
+
+p {
+  color: var(--text);
+}
